language/move-lang/tests/move_check/dependencies/multiple_friend_cycles.exp
error: 

   ┌── tests/move_check/dependencies/multiple_friend_cycles.move:8:5 ───
   │
 8 │     friend 0x2::A;
   │     ^^^^^^^^^^^^^^ Invalid friend of module '0x2::A' in module '0x2::B'.
   ·
 8 │     friend 0x2::A;
   │     -------------- Friending this module creates a dependency cycle: '0x2::B' may use '0x2::A' may use '0x2::B'
   │

